# RayTracer2

./: .gitignore  CMakeLists.txt  compile_commands.json
includes/: Camera.hpp  Engine.hpp  Scene.hpp  SharedStructs.h  Utils.hpp  World.hpp
includes/DisplayWindow/: DisplayWindow.hpp
includes/InfoWindow/: InfoWindow.hpp
includes/SharedStructs/: CameraMetadata.h  HitRecord.h  Interval.h  Ray.h  SharedStructs.h  Triangle.h  Vec3.h
libs/Loki/: loki.metal  loki_header.metal
srcs/: Camera.cpp  Engine.cpp  Scene.cpp  World.cpp  main.cpp
srcs/DisplayWindow/: DisplayWindow.cpp
srcs/InfoWindow/: InfoWindow.cpp
srcs/Shaders/: raytracer.metal
